Insta link changed, also alignment issue in footer fixed

--- a/src/main/webapp/assets/css/main.css
+++ b/src/main/webapp/assets/css/main.css
@@ -3459,8 +3459,8 @@
 			#footer .menu li {
 				border-left: 0;
 				padding: 1em 0 0 0;
-				margin: 0;
-				display: block;
+				margin-left: 1em;
+				display: inline-block;
 			}
 
 				#footer .menu li:first-child {
